--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,4 +23,4 @@ jobs:
           deno-version: v1.x
 
       - name: Publish to JSR
-        run: deno run -A jsr:@david/publish-on-tag@0.1.3 --unstable-sloppy-imports
+        run: deno run -A jsr:@david/publish-on-tag@0.1.3
