--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,8 @@
   },
   "compilerOptions": {
     "lib": [
-      "ESNext"
+      "ESNext",
+      "deno.window"
     ],
     "target": "ESNext",
     "module": "ESNext",
